# pi-sim-evals

./: .dockerignore  .gitignore  .gitmodules  Makefile  NOTES.md  README.md  api.Dockerfile  curobo_run_eval.py  cutamp_eval.py  jing_cutamp_plan.pkl  main.py  pkl_eval.py  pyproject.toml  randomize_scene2.py  randomize_scenes.py  run_calibration.py  run_dreamzero_eval.py  run_eval.py  run_eval_curobo.py  run_pi_eval.py  sim_server.py  test.py  tiptop_eval.py  tiptop_rand_eval.py  tiptop_ws_eval.py  ui.Dockerfile  web_ui.py
dreamzero_eval_utils/: serve_dreamzero_wan22.py
dynamic_prompting/: progress_monitor.py  prompt_calibration.py  subtask_manager.py
pkl_trajectories/: jing_cutamp_plan_v2.pkl
src/: recording.py  scene_randomization.py  visual_utils.py
src/environments/: droid_environment.py  nvidia_droid.py
src/inference/: cutamp_jointpos.py  droid_jointpos.py  droid_jointvel.py  gemini.py  gemini_helpers.py  isaac_camera.py  label_video.ipynb  motion_planner.py  state_checker.py  termination_checker.py  test_gemini.ipynb  tiptop_pi_websocket.py  tiptop_websocket.py
src/inference/tiptop_adapters/: isaac_camera.py  isaac_robot_client.py  tiptop_jointpos.py
src/sim_evals/environments/: droid_environment.py  nvidia_droid.py
tiptop_assets/: tiptop_traj.pkl
